; ModuleID = '/home/carl/AnghaBench/git/t/t4256/1/extr_mailinfo.c_handle_patch.c'
source_filename = "/home/carl/AnghaBench/git/t/t4256/1/extr_mailinfo.c_handle_patch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mailinfo = type { i32, i32 }
%struct.strbuf = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mailinfo*, %struct.strbuf*)* @handle_patch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_patch(%struct.mailinfo* %0, %struct.strbuf* %1) #0 {
  %3 = alloca %struct.mailinfo*, align 8
  %4 = alloca %struct.strbuf*, align 8
  store %struct.mailinfo* %0, %struct.mailinfo** %3, align 8
  store %struct.strbuf* %1, %struct.strbuf** %4, align 8
  %5 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %6 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %9 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.mailinfo*, %struct.mailinfo** %3, align 8
  %12 = getelementptr inbounds %struct.mailinfo, %struct.mailinfo* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @fwrite(i32 %7, i32 1, i32 %10, i32 %13)
  %15 = load %struct.mailinfo*, %struct.mailinfo** %3, align 8
  %16 = getelementptr inbounds %struct.mailinfo, %struct.mailinfo* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %16, align 4
  ret void
}

declare dso_local i32 @fwrite(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
